--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Jiayu Zheng"
-description              : "Academic homepage of Jiayu Zheng, currently a master student at Brown University. Focusing on data science, deep learning, NLP and VLM!"
+description              : "Currently a data science master student at Brown University. Focusing on data science, deep learning, NLP and VLM!"
 repository               : "BubbleJoe-BrownU/bubblejoe-brownu.github.io"
 google_scholar_stats_use_cdn : true
 
