--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -16,7 +16,7 @@ main:
     url: "/#-educations"
 
   - title: "Experiences"
-    url: "/#-invited-talks"
+    url: "/#-experiences"
 
   - title: "Internships"
     url: "/#-internships"
