--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -18,8 +18,8 @@ main:
   - title: "Educations"
     url: "/#-educations"
 
-  - title: "Experiences"
-    url: "/#-experiences"
+  - title: "Services"
+    url: "/#-services"
 
   - title: "Internships"
     url: "/#-internships"
