--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Jiayu Zheng"
-description              : "Sc.M. student at Brown University. Interested in machine learning, deep learning, computational linguistics and vision-language models."
+description              : "Sc.M. student at Brown University. Working with deep learning, natural language processing (NLP) and vision-language models (VLM)."
 repository               : "BubbleJoe-BrownU/bubblejoe-brownu.github.io"
 google_scholar_stats_use_cdn : true
 
