--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # `jekyll serve`. If you change this file, please restart the server process.
 
 # Site Settings
-title                    : "Jiayu Zheng"
+title                    : "Jiayu Zheng 郑家瑜"
 description              : "Sc.M. student at Brown University. Working with deep learning, natural language processing (NLP) and vision-language models (VLM)."
 repository               : "BubbleJoe-BrownU/bubblejoe-brownu.github.io"
 google_scholar_stats_use_cdn : true
