--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Jiayu Zheng"
-description              : "Sc.M. student at Brown University. Working with deep learning, natural language processing (NLP), and vision-language models (VLM)."
+description              : "Sc.M. student at Brown University. My skill set includes LLMs instruction fine-tuning, improving reasoning in VLMs, and LLM agent systems."
 repository               : "BubbleJoe-BrownU/bubblejoe-brownu.github.io"
 google_scholar_stats_use_cdn : true
 
